...
                                    }
                                }
                            }
                        )

                        WebSnagBottomNavItem(
                            label = "Activity",
                            icon = Icons.AutoMirrored.Filled.TrendingUp,
                            isSelected = currentRoute == Screen.Activity.route,
                            onClick = {
                                if (currentRoute != Screen.Activity.route) {
                                    navController.navigate(Screen.Activity.route) {
                                        popUpTo(navController.graph.findStartDestination().id) {
...
                                    }
                                }
                            }
                        )

                        WebSnagBottomNavItem(
                            label = "NFC Hub",
                            icon = Icons.Default.Nfc,
                            isSelected = currentRoute == Screen.Tags.route,
                            onClick = {
                                if (currentRoute != Screen.Tags.route) {
                                    navController.navigate(Screen.Tags.route) {
                                        popUpTo(navController.graph.findStartDestination().id) {
...
